# aws_sdk_rust_bench

./: Cargo.toml  README.md  go.mod  main.go
scripts/: bench  put_objects
src/: main.rs
