[package]
name = "aws_sdk_rust_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.71.0"
aws-smithy-runtime = "1.7.7"
hyper-rustls = { version = "0.25.0", features = ["webpki-roots"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
debug = true
